:bug: Updated z-index

--- a/packages/navel-ui/src/scss/ui/_dropdown.scss
+++ b/packages/navel-ui/src/scss/ui/_dropdown.scss
@@ -29,7 +29,7 @@
         top: calc(100% + 10px);
         max-width: 100%;
         min-width: 200px;
-        z-index: 10;
+        z-index: 10010;
 
         .list
         {
