--- a/packages/navel-ui/src/scss/ui/_modal.scss
+++ b/packages/navel-ui/src/scss/ui/_modal.scss
@@ -5,7 +5,7 @@
     top: 0;
     left: 0;
     right: 0;
-    z-index: 10010;
+    z-index: 10011;
 
     .modal-backdrop
     {
